fix(global.scss): overflow-x

--- a/client/assets/style/global.scss
+++ b/client/assets/style/global.scss
@@ -4,7 +4,7 @@ html {
 
 body {
     margin: 0;
-    overflow-x: hidden;
+    overflow-x: visible;
 
     &::-webkit-scrollbar { display: none; } // hide scrollbar for Chrome
     -ms-overflow-style: none; // hide scrollbar for IE & Edge
